--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -374,39 +374,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      72\n",
-       "1      69\n",
-       "2      90\n",
-       "3      47\n",
-       "4      76\n",
-       "       ..\n",
-       "995    88\n",
-       "996    62\n",
-       "997    59\n",
-       "998    68\n",
-       "999    77\n",
-       "Name: math_score, Length: 1000, dtype: int64"
+       "0    72\n",
+       "1    69\n",
+       "2    90\n",
+       "3    47\n",
+       "4    76\n",
+       "Name: math_score, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y"
+    "y.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -431,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -441,7 +435,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
+   "id": "21377f78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         0.19399858,  0.39149181],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         1.42747598,  1.31326868],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         1.77010859,  1.64247471],\n",
+       "       ...,\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.12547206, -0.20107904],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  0.        ,\n",
+       "         0.60515772,  0.58901542],\n",
+       "       [ 1.        ,  0.        ,  0.        , ...,  1.        ,\n",
+       "         1.15336989,  1.18158627]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -451,7 +478,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -472,7 +499,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -509,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -578,22 +605,22 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.6371\n",
-      "- Mean Absolute Error: 6.0250\n",
-      "- R2 Score: 0.7603\n",
+      "- Root Mean Squared Error: 7.6831\n",
+      "- Mean Absolute Error: 6.1400\n",
+      "- R2 Score: 0.7574\n",
       "===================================\n",
       "\n",
       "\n",
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.2851\n",
-      "- Mean Absolute Error: 1.8253\n",
-      "- R2 Score: 0.9768\n",
+      "- Root Mean Squared Error: 2.2896\n",
+      "- Mean Absolute Error: 1.8389\n",
+      "- R2 Score: 0.9767\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0959\n",
-      "- Mean Absolute Error: 4.7194\n",
-      "- R2 Score: 0.8473\n",
+      "- Root Mean Squared Error: 6.0139\n",
+      "- Mean Absolute Error: 4.6070\n",
+      "- R2 Score: 0.8514\n",
       "===================================\n",
       "\n",
       "\n",
@@ -625,14 +652,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.7843\n",
-      "- Mean Absolute Error: 4.7564\n",
-      "- R2 Score: 0.8516\n",
+      "- Root Mean Squared Error: 5.8280\n",
+      "- Mean Absolute Error: 4.7599\n",
+      "- R2 Score: 0.8493\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0447\n",
-      "- Mean Absolute Error: 4.6813\n",
-      "- R2 Score: 0.8498\n",
+      "- Root Mean Squared Error: 6.2934\n",
+      "- Mean Absolute Error: 4.9440\n",
+      "- R2 Score: 0.8372\n",
       "===================================\n",
       "\n",
       "\n"
@@ -698,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -744,14 +771,14 @@
        "      <td>0.851632</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.849847</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.847291</td>\n",
+       "      <td>0.851373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>AdaBoost Regressor</td>\n",
+       "      <td>0.837236</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -771,7 +798,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.760313</td>\n",
+       "      <td>0.757416</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -782,15 +809,15 @@
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.880345\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.849847\n",
-       "5  Random Forest Regressor  0.847291\n",
+       "5  Random Forest Regressor  0.851373\n",
+       "8       AdaBoost Regressor  0.837236\n",
        "1                    Lasso  0.825320\n",
        "6             XGBRegressor  0.821589\n",
        "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.760313"
+       "4            Decision Tree  0.757416"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -839,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -862,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -891,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1037,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
